# mlops-pipelines

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: aws-sagemaker-pipeline-ci.yml  aws-sagemaker-pipeline-terraform-validate.yml  ci.yml
aws-sagemaker-pipeline/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
aws-sagemaker-pipeline/configs/: train_config.json
aws-sagemaker-pipeline/docker/: Dockerfile.sagemaker  serve
aws-sagemaker-pipeline/infra/terraform/: .terraform.lock.hcl  README.md  alarms.tf  endpoint.tf  main.tf  outputs.tf  schedule.tf  terraform.tfvars.example  variables.tf
aws-sagemaker-pipeline/scripts/: deploy_to_sagemaker.sh  generate_sample_data.py  package_model_for_sagemaker.py  sagemaker_deploy_example.py  sagemaker_pipeline_example.py
aws-sagemaker-pipeline/src/mlops_serving_starter/api/: app.py
aws-sagemaker-pipeline/src/mlops_serving_starter/monitoring/: __init__.py  drift.py
aws-sagemaker-pipeline/src/mlops_serving_starter/sagemaker/: deploy.py  inference.py  pipeline.py  serve_app.py
aws-sagemaker-pipeline/src/mlops_serving_starter/serving/: model_loader.py
aws-sagemaker-pipeline/src/mlops_serving_starter/training/: feature_engineering.py  promote.py  train.py  train_all_horizons.py
aws-sagemaker-pipeline/src/mlops_serving_starter/utils/: naming.py
aws-sagemaker-pipeline/tests/: conftest.py  test_api.py  test_drift.py  test_sagemaker_deploy.py  test_sagemaker_inference.py  test_sagemaker_pipeline.py  test_train.py
dashboard/: app.py  pyproject.toml
ibm-code-engine-pipeline/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
ibm-code-engine-pipeline/configs/: pipeline_config.json
ibm-code-engine-pipeline/scripts/: deploy.sh  generate_and_upload.py  generate_sample_data.py  upload_sample_data.sh
ibm-code-engine-pipeline/src/features/: feature_engineering.py
ibm-code-engine-pipeline/src/inference/: predictor.py
ibm-code-engine-pipeline/src/orchestrator/: config.py  main.py
ibm-code-engine-pipeline/src/storage/: cos_client.py
ibm-code-engine-pipeline/src/training/: trainer.py
ibm-code-engine-pipeline/tests/: test_features.py  test_training.py
ibm-watsonx-pipeline/: .ceignore  .env.example  Dockerfile  README.md  pyproject.toml
ibm-watsonx-pipeline/configs/: pipeline_config.json
ibm-watsonx-pipeline/local_storage/watsonx_registry/: mock-deploy-20260603142456.json  mock-model-20260603142426_meta.json  mock-model-20260603142456_meta.json
ibm-watsonx-pipeline/scripts/: deploy.sh  deploy_to_ibm_cloud.sh  generate_sample_data.py  prepare_local_data.py  watsonx_deploy_example.py
ibm-watsonx-pipeline/src/: __init__.py
ibm-watsonx-pipeline/src/inference/: __init__.py  predictor.py
ibm-watsonx-pipeline/src/monitoring/: __init__.py  tracker.py
ibm-watsonx-pipeline/src/pipeline/: __init__.py  config.py  dag.py  orchestrator.py
ibm-watsonx-pipeline/src/storage/: __init__.py  cos_client.py  local_storage.py  mock_watsonx.py  watsonx_client.py
ibm-watsonx-pipeline/src/training/: feature_engineering.py  trainer.py
ibm-watsonx-pipeline/tests/: __init__.py  conftest.py  test_dag.py  test_features.py  test_model_saving.py  test_monitoring.py  test_training.py
scripts/: ci_local.sh
shared/: README.md  pyproject.toml
shared/src/mlops_core/: __init__.py
shared/src/mlops_core/features/: __init__.py  engineering.py
shared/src/mlops_core/inference/: __init__.py  predictor.py
shared/src/mlops_core/monitoring/: __init__.py  retrain_trigger.py
shared/src/mlops_core/storage/: __init__.py  cos_client.py
shared/src/mlops_core/testing/: __init__.py  fixtures.py
shared/src/mlops_core/training/: __init__.py  trainer.py
shared/tests/: conftest.py  test_core.py
