[project]
name = "ibm-energy-forecast-pipeline"
version = "0.1.0"
description = "Energy price forecasting pipeline for IBM Cloud Code Engine"
authors = [{ name = "Linh Tran" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ibm-cos-sdk>=2.13.0,<3.0.0",
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.0,<3.0.0",
    "scikit-learn>=1.5.0,<2.0.0",
    "xgboost>=2.0.0,<3.0.0",
    "holidays>=0.50,<1.0.0",
    "pyarrow>=15.0.0,<18.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "structlog>=24.0.0,<25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0.0",
    "ruff>=0.5.0,<1.0.0",
    "moto>=5.0.0,<6.0.0",
]

[project.scripts]
run-pipeline = "src.orchestrator.main:main"
run-training = "src.orchestrator.main:run_training_only"
run-inference = "src.orchestrator.main:run_inference_only"

[build-system]
requires = ["hatchling>=1.0.0,<2.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

