[project]
name = "mlops-core"
version = "0.1.0"
description = "Shared ML utilities for energy price forecasting pipelines"
authors = [{ name = "Linh Tran" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.0,<3.0.0",
    "scikit-learn>=1.5.0,<2.0.0",
    "xgboost>=2.0.0,<3.0.0",
    "holidays>=0.50,<1.0.0",
    "structlog>=24.0.0,<25.0.0",
]

[project.optional-dependencies]
cos = [
    "ibm-cos-sdk>=2.13.0,<3.0.0",
    "pyarrow>=15.0.0,<18.0.0",
]
dev = [
    "pytest>=8.2.0,<9.0.0",
    "ruff>=0.5.0,<1.0.0",
]

[build-system]
requires = ["hatchling>=1.0.0,<2.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlops_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

